k8s/overlays/stg/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: admin-ui
spec:
  template:
    metadata:
      labels:
        environment: staging
    spec:
      containers:
      - name: admin-ui
        resources:
          requests:
            memory: "256Mi"
            cpu: "50m"
          limits:
            memory: "512Mi"
            cpu: "200m"
